--- a/basic_wallet_p/templates/base.html
+++ b/basic_wallet_p/templates/base.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>PKoin Wallet</title>
-</head>
-<body>
+<html>
+    <head>
+      {% if title %}
+      <title>{{ title }} - PKoin Wallet</title>
+      {% else %}
+      <title>Welcome to PKoin Wallet</title>
+      {% endif %}
+    <div>
+        <a href="/login">Login</a>
+    </div>
 
-</body>
+    </head>
+    <body>
+        <div><h1>Welcome to PKoin Wallet</h1></p></div>
+        <hr>
+        {% block content %}{% endblock %}
+    </body>
 </html>
