--- a/basic_wallet_p/templates/login.html
+++ b/basic_wallet_p/templates/login.html
@@ -11,4 +11,5 @@
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
+    {{message}}
 {% endblock %}
